--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ __pycache__/
 
 # Ignore all yellow_tripdata_*.parquet files in 1-intro directory
 1-intro/yellow_tripdata_*.parquet
-
+2-experiment-tracking/data/
 
 # Distribution / packaging
 .Python
